# RustKernel

./: .gitignore  Cargo.toml  LICENSE  README.md  generatePios.sh
.cargo/: config.toml
boards/msp432/: Cargo.toml
boards/msp432/.cargo/: config.toml
boards/msp432/src/: lib.rs
boards/msp432/tests/: alloc_test.rs
chips/cortex-m4/: Cargo.toml
chips/cortex-m4/src/: mutex.rs
kernel/: Cargo.toml  cbindgen.toml  generatePios.sh  pios.h
kernel/src/: lib.rs  utility.rs
kernel/src/allocator/: mod.rs
kernel/src/mutex/: mod.rs
kernel/src/syscalls/: mod.rs
kernel/src/task/: mod.rs
src/: lib.rs  main.rs  task_queue.rs
src/allocator/: mod.rs
src/mutex/: mod.rs
src/syscalls/: mod.rs
src/task/: mod.rs
test_app/: .gdbinit  Cargo.toml
test_app/.cargo/: config.toml
test_app/src/: alloc_tests.rs  allocator_tests.rs  main.rs  syscalls_tests.rs  task_tests.rs
