[package]
name = "pios_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"
kernel = { path = "kernel" }

[dev-dependencies]
cortex-m-semihosting = "0.3.3"

[profile.dev]
panic = "abort"
codegen-units = 1
debug = 0
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
debug = 0
lto = true
opt-level = "z"