[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"

[dev-dependencies]
cortex-m-semihosting = "0.3.3"

[lib]
name = "pios"
crate-type = ["staticlib"]

[[bin]]
path = "src/main.rs"
name = "piosapp"

[profile.dev]
debug = true


