[package]
name = "test_app"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
kernel = { path = "../kernel" }

[dev-dependencies]
cortex-m-semihosting = "0.3.3"

[profile.dev]
debug = true
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
debug = 0
lto = true
opt-level = "z"