[package]
authors = ["AlbertoZaupa <alberto.zaupa@studenti.unitn.it>"]
edition = "2018"
readme = "README.md"
name = "pios"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
kernel = { path="../../kernel" }
cortex-m4 = { path="../../chips/cortex-m4" }

# this lets you use `cargo fix`!
[lib]
name = "pios"
crate-type = ["staticlib"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
