[package]
authors = ["AlbertoZaupa <alberto.zaupa@studenti.unitn.it>"]
edition = "2018"
readme = "README.md"
name = "pios"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"
kernel = { path="../../kernel" }
cortex-m4 = { path="../../chips/cortex-m4" }

[dev-dependencies]
cortex-m-semihosting = "0.3.3"
defmt = "0.3"
defmt-rtt = "0.4"
defmt-test = "0.3"

[lib]
name = "pios"
crate-type = ["staticlib"]

[[test]]
name = "alloc_test"
harness = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
